fixed sizing issue on firefox

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -9,6 +9,7 @@
     object-fit: cover;
   }
   &__text {
+    width: 45%;
     text-align: right;
     padding-left: 25px;
     position: relative;
@@ -130,6 +131,7 @@
       width: 50%;
     }
     &__text {
+      width: 50%;
       &__excerpt {
         padding: 20px;
         width: 130%;
@@ -155,6 +157,7 @@
       text-align: left;
       padding-left: 0;
       padding-right: 0;
+      width: 100%;
       &__excerpt {
         padding: 0;
         background-color: transparent;
